--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button type="submit">Entrar</button>
         </form>
     </div>
+    <a href="posLogin/inicio.html">link</a>
 </body>
 <script src="scripts.js"></script>
 </html>
