--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </form>
     </div>
     <a href="posLogin/inicio.html">link</a>
+    <a href="https://cliquepedagogico.com.br/chat-assistente/">Chat</a>
 </body>
 <script src="scripts.js"></script>
 </html>
