Atualizado as paginas para redirecionar para o login

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <a href="https://www.tiktok.com/@cliquepedagogico" target="_blank"><i class='bx bxl-tiktok'></i></a>
         <!--redes sociais-->
         <img id="logo-header" src="/logos/Logo Completo Clique Pedagógico v4.png" alt="">
-        <a href="{{ url_for('login') }}"><button id="entre">Entre ou Assine Agora</button></a>
+        <a href="/templates/login.html">
+            <button id="entre">Entre ou Assine Agora</button>
+          </a>
     </header>
     <!--Fim do cabeçalho-->
     <!--inicio das paginas-->
