Atualização de redirecionamento e pagina inicial

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="/incons/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/static/styleIndex.css" type="image/x-icon">
+    <link rel="stylesheet" href="/static/styleIndex.css">
     <title>Clique pedagogico</title>
 </head>
 <body>
     <!--inicio do cabeçalho-->
     <header id="socialBar">
         <!--redes sociais-->
-        <a href="https://www.facebook.com/cliquepedagogico"><i class='bx bxl-facebook'></i></a>
-        <a href="https://www.instagram.com/clique_pedagogico/"><i class='bx bxl-instagram'></i></a>
-        <a href="https://www.youtube.com/channel/UCf7L4NT5JXOeFVJ0eIlECvg"><i class='bx bxl-youtube'></i></a>
+        <a href="https://www.facebook.com/cliquepedagogico" target="_blank"><i class='bx bxl-facebook'></i></a>
+        <a href="https://www.instagram.com/clique_pedagogico/" target="_blank"><i class='bx bxl-instagram'></i></a>
+        <a href="https://www.youtube.com/channel/UCf7L4NT5JXOeFVJ0eIlECvg" target="_blank"><i class='bx bxl-youtube'></i></a>
         <a href="https://br.pinterest.com/clique_pedagogico/" target="_blank"><i class='bx bxl-pinterest'></i></a>
         <a href="https://www.linkedin.com/in/clique-pedag%C3%B3gico-ba63722a5/" target="_blank"><i class='bx bxl-linkedin-square'></i></a>
         <a href="https://www.tiktok.com/@cliquepedagogico" target="_blank"><i class='bx bxl-tiktok'></i></a>
         <!--redes sociais-->
-        <img id="logo-header" src="/logos/Logo Completo Clique Pedagógico v4.png" alt="">
-        <a href="/templates/login.html">
-            <button id="entre">Entre ou Assine Agora</button>
+        <img id="logo-header" src="static/logos/Logo Completo Clique Pedagógico v4.png" alt="">
+        <a href="/login">
+            <button  id="entre">Entre ou Assine Agora</button>
           </a>
     </header>
     <!--Fim do cabeçalho-->
@@ -29,18 +29,18 @@
     <nav class="navbar-roxa" id="navbarMenu"> 
         <a class="paginas" href="index.html">Planos de Aula</a>
         <i></i>
-        <a class="paginas"  href="/lojinha/lojinha.html">Lojinha</a>
+        <a class="paginas"  href="lojinha/lojinha.html">Lojinha</a>
         <i></i>
         <a class="paginas"  href="/assinaturas/assinaturas.html">Assinatura</a>
         <i></i>
         <a class="paginas"  href="/contato/contato.html">Contato - FAQ</a>
         <i></i>
-        <a class="paginas"  href="#">chat</a>
+        <a class="paginas"  href="/chat_ui">chat</a>
     </nav>
     <!--fim das paginas-->
     <!--inicio do banner-->
     <section id="banner" >
-        <img id="img-inicio" src="/Fotos/inicio.webp" alt="">
+        <img id="img-inicio" src="static/Fotos/inicio.webp" alt="">
     </section>
     <!--fim do banner-->
     <!--inicio dos filtros-->
@@ -132,7 +132,7 @@
      <article id="main">
          <article id="planoAula">
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                 <section>
                     <button class="button">
                         BAIXAR PDF PLANO DE AULA
@@ -140,31 +140,31 @@
                 </section>
             </div>
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                  <button class="button">
                         BAIXAR PDF PLANO DE AULA
                     </button>
             </div>
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                  <button class="button">
                         BAIXAR PDF PLANO DE AULA
                     </button>
             </div>
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                  <button class="button">
                         BAIXAR PDF PLANO DE AULA
                     </button>
             </div>
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                  <button class="button">
                         BAIXAR PDF PLANO DE AULA
                     </button>
             </div>
             <div class="pdf">
-                <img class="imgPdf" src="/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
+                <img class="imgPdf" src="static/pfd/Antigo PLA-DP-01-0001-LB.png" alt="">
                  <button class="button">
                         BAIXAR PDF PLANO DE AULA
                     </button>
@@ -183,14 +183,14 @@
         </div>
         <section id="rodape">
             <div id="img">
-                <img id="lancamento" src="/Fotos/Lançamento.png" alt="">
+                <img id="lancamento" src="static/Fotos/Lançamento.png" alt="">
                 <div id="ball">
-                    <img src="/Fotos/1.png" alt="">
-                    <img src="/Fotos/6.png" alt="">
-                    <img src="/Fotos/5.png" alt="">
-                    <img src="/Fotos/4.png" alt="">
-                    <img src="/Fotos/2.png" alt="">
-                    <img src="/Fotos/3.png" alt="">
+                    <img src="static/Fotos/1.png" alt="">
+                    <img src="static/Fotos/6.png" alt="">
+                    <img src="static/Fotos/5.png" alt="">
+                    <img src="static/Fotos/4.png" alt="">
+                    <img src="static/Fotos/2.png" alt="">
+                    <img src="static/Fotos/3.png" alt="">
                 </div>
                 <h1>ASSINATURAS</h1>
                 <div id="ass">
@@ -207,11 +207,11 @@
                             <span class="valor">19</span><sup class="centavos">90</sup>
                             <div class="mensal">Mensal</div>
                           </div> 
-                        <p> <img class="icons" src="/incons/check-mark 2.svg">Pagamento Mensal recorrente.​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> Acesso a todos os Planos de Aulas.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> DESCONTO de 20% em todos os produtos da Lojinha.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> FRETE GRÁTIS em compras acima de R$ 299,99 na Lojinha.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> Cancele quando quiser.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg">Pagamento Mensal recorrente.​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> Acesso a todos os Planos de Aulas.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> DESCONTO de 20% em todos os produtos da Lojinha.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> FRETE GRÁTIS em compras acima de R$ 299,99 na Lojinha.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> Cancele quando quiser.​​</p>
                         <button id="assinar">
                             Assinar
                         </button>
@@ -227,11 +227,11 @@
                             <span class="valor">199</span><sup class="centavos">90</sup>
                             <div class="mensal">Anual</div>
                           </div> 
-                        <p> <img class="icons" src="/incons/check-mark 2.svg">Pagamento Mensal recorrente com DESCONTO.​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> Acesso a todos os Planos de Aulas.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> DESCONTO de 20% em todos os produtos da Lojinha.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> FRETE GRÁTIS em compras acima de R$ 299,99 na Lojinha.​​</p>
-                        <p> <img class="icons" src="/incons/check-mark 2.svg"> Cancele quando quiser.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg">Pagamento Mensal recorrente com DESCONTO.​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> Acesso a todos os Planos de Aulas.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> DESCONTO de 20% em todos os produtos da Lojinha.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> FRETE GRÁTIS em compras acima de R$ 299,99 na Lojinha.​​</p>
+                        <p> <img class="icons" src="static/incons/check-mark 2.svg"> Cancele quando quiser.​​</p>
                         <button id="assinar">
                             Assinar
                         </button>
@@ -240,22 +240,22 @@
                 </div>
                 <!--Formas de pagamento-->
                 <div id="pag">
-                    <div class="img-pag"><img class="form-pag" src="/Fotos/Mercado-Pago-2.png"> 
+                    <div class="img-pag"><img class="form-pag" src="static/Fotos/Mercado-Pago-2.png"> 
                         <div class="rodape-texto">
                         <h1>Pagamento Seguro</h1><p>mesma plataforma do mercado livre.</p>
                     </div>
                     </div>
-                    <div class="img-pag"><img class="form-pag" src="/Fotos/Pix.png">
+                    <div class="img-pag"><img class="form-pag" src="static/Fotos/Pix.png">
                         <div class="rodape-texto">
                             <h1>PIX</h1><p>Rápido e fácil.</p>
                         </div>
                     </div>
-                    <div class="img-pag"><img class="form-pag" src="/Fotos/Cartao-de-Credito.png">
+                    <div class="img-pag"><img class="form-pag" src="static/Fotos/Cartao-de-Credito.png">
                         <div class="rodape-texto">
                             <h1>Cartão de Crédito</h1><p>Pafamento recorrente atumático</p>
                         </div>
                     </div>
-                    <div class="img-pag"><img class="form-pag" src="/Fotos/Boleto.png">
+                    <div class="img-pag"><img class="form-pag" src="static/Fotos/Boleto.png">
                         <div class="rodape-texto">
                             <h1>Boleto</h1><p>Vencimento em 3 dias.</p>
                         </div>
@@ -283,9 +283,9 @@
                     </div>
                     <div class="pedidos">
                         <h1>Formas de Pagamentos</h1>
-                        <img id="mercado-pago" src="/Fotos/Mercado-Pago.png" >
+                        <img id="mercado-pago" src="static/Fotos/Mercado-Pago.png" >
                         <h1>Site Seguro</h1>
-                        <img id="site-seguro" src="/Fotos/site seguro.png">
+                        <img id="site-seguro" src="static/Fotos/site seguro.png">
                     </div>
                 </div>
         
@@ -315,6 +315,6 @@
   
      <!--fim do radapé-->
 
-     <script src="script.js"></script>
+     <script src="/static/scriptIndex.js"></script>
 </body>
 </html>
